# libblosc

./: DESCRIPTION  LICENSE  configure  configure.ac
R/: zzz.R
src/: Makevars.in
src/c-blosc-1.12.1/: CMakeLists.txt
src/hdf5-blosc/: CMakeLists.txt
